--- a/pages/service.html
+++ b/pages/service.html
@@ -191,7 +191,10 @@ input[type="radio"]:checked {
       </ul>
       <div class="d-flex align-items-center">
         <!-- Button trigger modal --> 
-        <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn border border-secondary px-3 px-lg-4 py-2" style="border-radius: 16px;">登入/註冊</button>
+        <a  data-bs-toggle="modal" data-bs-target="#exampleModal" class="d-flex justify-content-center align-items-center text-decoration-none text-dark">
+          <img src="/assets/images/img/avatar.png" alt="#" class="rounded-circle" style="max-width:44px;" >
+          <span class="d-none d-lg-block ms-2">Mokumaru</span>
+        </a>
         <svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#e3e3e3" class="d-md-none  ms-4"><path d="M92-92v-96.67h776.67V-92H92Zm0-340v-96.67h776.67V-432H92Zm0-340v-96.67h776.67V-772H92Z"/></svg>
       </div>
       <!-- Modal -->
