--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
   text-decoration: none;
   font-weight: 700;
 }
+
 .swiper-slide img {
   display: block;
   width: 100%;
@@ -140,7 +141,7 @@
     height: 1px;
   }
     </style>
-    <script type="module" crossorigin src="/htmlweek6/assets/main-Cbc8XDZT.js"></script>
+    <script type="module" crossorigin src="/htmlweek6/assets/main-Cdo9bqnP.js"></script>
     <link rel="stylesheet" crossorigin href="/htmlweek6/assets/main-Cx073WyX.css">
   </head>
   <body>
@@ -297,8 +298,8 @@
     <div class="col-lg-8">
       <div class="swiper mySwiper mb-3">
         <div class="swiper-wrapper">
-          <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4 position-relative bg-white " role="group" aria-label="1 / 5" style="width: 400px;" >
-            <div class="horn"><img src="https://github.com/0404kai/2025-layout-img/blob/main/week6/img.png?raw=true" class="mb-3" alt="圖片1"></div>
+          <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white" role="group" aria-label="1 / 6" >
+            <div class="horn"><img src="/htmlweek6/assets/story-cover-1-Bn7anPV1.png" class="mb-3" alt="圖片1"></div>
             <div class="p-3">
               <h3 class="fs-4 fw-900 mb-3">轉型成功的設計師</h3>
               <p class="mb-3">從企業設計師轉職自由接案，比我想的難太多。收入不穩時我幾乎想放棄，是職旅顧問幫我找回方向與差異化。半年後，我不僅維持收入，還能自由挑案，最重要的是，我終於有時間陪爸媽。</p>
@@ -309,8 +310,8 @@
             </div>
             <span class="position-absolute bg-primary text-white top-0 start-0 m-2 px-3 py-2 fw-medium"  style="border-radius: 16px;">數位遊牧 2 年</span>
           </div>
-          <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4 position-relative bg-white" role="group" aria-label="2 / 5" style="width: 400px;" >
-            <div class="horn"><img src="https://github.com/0404kai/2025-layout-img/blob/main/week6/image.png?raw=true" class="mb-3" alt="圖片1"></div>
+          <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white" role="group" aria-label="2 / 6" >
+            <div class="horn"><img src="/htmlweek6/assets/story-cover-2-CWUZyQXo.png" class="mb-3" alt="圖片1"></div>
             <div class="p-3">
               <h3 class="fs-4 fw-900 mb-3">數位遊牧生活實踐者</h3>
               <p class="mb-3">兩年前我只想環遊世界，卻不知道怎麼開始。職旅給了我遠端工作與生活規劃的指導。現在我在五個國家工作過，收入比以前多 20%。每次打開電腦，看見窗外不同的風景，都慶幸當初那一個決定。</p>
@@ -321,8 +322,8 @@
             </div>
             <span class="position-absolute bg-primary text-white top-0 start-0 m-2 px-3 py-2 fw-medium"  style="border-radius: 16px;">數位遊牧 2 年</span>
           </div>
-          <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4 position-relative bg-white" role="group" aria-label="3 / 5" style="width: 400px;" >
-            <div class="horn"><img src="https://raw.githubusercontent.com/0404kai/2025-layout-img/3ef810b0ed1306314aacd57e24d7706746c45988/week6/image-1.png" class="mb-3" alt="圖片1"></div>
+          <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white" role="group" aria-label="3 / 6" >
+            <div class="horn"><img src="/htmlweek6/assets/story-cover-3-BUqkWZaw.png" class="mb-3" alt="圖片1"></div>
             <div class="p-3">
               <h3 class="fs-4 fw-900 mb-3">中年轉型的工程師</h3>
               <p class="mb-3">59 歲被裁員時，我以為職涯結束了。職旅顧問不只幫我轉職，更讓我相信自己還有價值。現在我每月穩定接案、收入翻倍。年齡不是限制，只是我還沒找到對的方向。</p>
@@ -333,8 +334,8 @@
             </div>
             <span class="position-absolute bg-primary text-white top-0 start-0 m-2 px-3 py-2 fw-medium"  style="border-radius: 16px;">數位遊牧 2 年</span>
           </div>
-          <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4 position-relative bg-white" role="group" aria-label="4 / 5" style="width: 400px;" >
-            <div class="horn"><img src="https://github.com/0404kai/2025-layout-img/blob/main/week6/img.png?raw=true" class="mb-3" alt="圖片1"></div>
+          <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white" role="group" aria-label="4 / 6" >
+            <div class="horn"><img src="/htmlweek6/assets/story-cover-4-DDRMNC6y.png" class="mb-3" alt="圖片1"></div>
             <div class="p-3">
               <h3 class="fs-4 fw-900 mb-3">轉型成功的設計師</h3>
               <p class="mb-3">從企業設計師轉職自由接案，比我想的難太多。收入不穩時我幾乎想放棄，是職旅顧問幫我找回方向與差異化。半年後，我不僅維持收入，還能自由挑案，最重要的是，我終於有時間陪爸媽。</p>
@@ -345,8 +346,20 @@
             </div>
             <span class="position-absolute bg-primary text-white top-0 start-0 m-2 px-3 py-2 fw-medium"  style="border-radius: 16px;">數位遊牧 2 年</span>
           </div>
-          <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4 position-relative bg-white" role="group" aria-label="5 / 5" style="width: 400px;" >
-            <div class="horn"><img src="https://github.com/0404kai/2025-layout-img/blob/main/week6/image.png?raw=true" class="mb-3" alt="圖片1"></div>
+          <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white" role="group" aria-label="5 / 6" >
+            <div class="horn"><img src="/htmlweek6/assets/story-cover-5-BO9rNF91.png" class="mb-3" alt="圖片1"></div>
+            <div class="p-3">
+              <h3 class="fs-4 fw-900 mb-3">數位遊牧生活實踐者</h3>
+              <p class="mb-3">兩年前我只想環遊世界，卻不知道怎麼開始。職旅給了我遠端工作與生活規劃的指導。現在我在五個國家工作過，收入比以前多 20%。每次打開電腦，看見窗外不同的風景，都慶幸當初那一個決定。</p>
+              <div class="d-flex">
+                <h4 class="fw-bold pe-2">內容策略師</h4>
+                <p class="border-start ps-2">林雨潔 (29y)</p>
+              </div>
+            </div>
+            <span class="position-absolute bg-primary text-white top-0 start-0 m-2 px-3 py-2 fw-medium"  style="border-radius: 16px;">數位遊牧 2 年</span>
+          </div>
+          <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white" role="group" aria-label="6 / 6" >
+            <div class="horn"><img src="/htmlweek6/assets/story-cover-6-DQ0Un_5J.png" class="mb-3" alt="圖片1"></div>
             <div class="p-3">
               <h3 class="fs-4 fw-900 mb-3">數位遊牧生活實踐者</h3>
               <p class="mb-3">兩年前我只想環遊世界，卻不知道怎麼開始。職旅給了我遠端工作與生活規劃的指導。現在我在五個國家工作過，收入比以前多 20%。每次打開電腦，看見窗外不同的風景，都慶幸當初那一個決定。</p>
@@ -451,6 +464,7 @@
         <h2 class="fs-1 text-white lh-sm fw-bold mb-md-5 mb-4 text-center">服務流程</h2>
         <p class=" text-white lh mb-md-5 text-center" style="font-size: 18px;">簡單四步，踏上你的職旅</p>
       <div class="container">
+      </div>
         <div class="row">
           <div class="col-lg-3">
             <div class="card  pt-6 pb-4 shadow  position-relative d-flex flex-column justify-content-center align-items-center" style="border-radius: 16px;">
