--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
 
 .swiper-slide img {
   display: block;
-  width: 100%;
-  height: 500px;
   object-fit: cover;
+}
+.h-253{
+  height: 253px;
 }
 .swiper-pagination {
   width: 232px;
@@ -141,7 +142,7 @@
     height: 1px;
   }
     </style>
-    <script type="module" crossorigin src="/htmlweek6/assets/main-9CUaBx_E.js"></script>
+    <script type="module" crossorigin src="/htmlweek6/assets/main-DwZvcFzd.js"></script>
     <link rel="stylesheet" crossorigin href="/htmlweek6/assets/main-Cx073WyX.css">
   </head>
   <body>
@@ -250,7 +251,7 @@
             </p>
         </div>
          <div class="d-none d-md-block">
-          <img src="/htmlweek6/assets/register-Cfh0nsYT.png" alt="#" style=" max-width: 700px;">
+          <img src="/htmlweek6/assets/register-Cfh0nsYT.png" alt="#" style=" max-width:700px;">
         </div>
       </div>
     </div>
@@ -299,8 +300,8 @@
       <div class="swiper mySwiper mb-3">
         <div class="swiper-wrapper">
           <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white" role="group" aria-label="1 / 6" >
-            <div class="horn"><img src="/htmlweek6/assets/story-cover-1-Bn7anPV1.png" class="mb-3" alt="圖片1"></div>
-            <div class="p-3">
+            <div class="horn"><img src="/htmlweek6/assets/story-cover-1-Bn7anPV1.png" class="mb-3 w-100" alt="圖片1"></div>
+            <div class="p-3 h-253">
               <h3 class="fs-4 fw-900 mb-3">轉型成功的設計師</h3>
               <p class="mb-3">從企業設計師轉職自由接案，比我想的難太多。收入不穩時我幾乎想放棄，是職旅顧問幫我找回方向與差異化。半年後，我不僅維持收入，還能自由挑案，最重要的是，我終於有時間陪爸媽。</p>
               <div class="d-flex">
@@ -310,9 +311,9 @@
             </div>
             <span class="position-absolute bg-primary text-white top-0 start-0 m-2 px-3 py-2 fw-medium"  style="border-radius: 16px;">數位遊牧 2 年</span>
           </div>
-          <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white" role="group" aria-label="2 / 6" >
-            <div class="horn"><img src="/htmlweek6/assets/story-cover-2-CWUZyQXo.png" class="mb-3" alt="圖片1"></div>
-            <div class="p-3">
+          <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white"  >
+            <div class="horn"><img src="/htmlweek6/assets/story-cover-2-CWUZyQXo.png" class="mb-3 w-100" alt="圖片1"></div>
+            <div class="p-3 h-253">
               <h3 class="fs-4 fw-900 mb-3">數位遊牧生活實踐者</h3>
               <p class="mb-3">兩年前我只想環遊世界，卻不知道怎麼開始。職旅給了我遠端工作與生活規劃的指導。現在我在五個國家工作過，收入比以前多 20%。每次打開電腦，看見窗外不同的風景，都慶幸當初那一個決定。</p>
               <div class="d-flex">
@@ -322,9 +323,9 @@
             </div>
             <span class="position-absolute bg-primary text-white top-0 start-0 m-2 px-3 py-2 fw-medium"  style="border-radius: 16px;">數位遊牧 2 年</span>
           </div>
-          <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white" role="group" aria-label="3 / 6" >
-            <div class="horn"><img src="/htmlweek6/assets/story-cover-3-BUqkWZaw.png" class="mb-3" alt="圖片1"></div>
-            <div class="p-3">
+          <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white"  >
+            <div class="horn"><img src="/htmlweek6/assets/story-cover-3-BUqkWZaw.png" class="mb-3 w-100" alt="圖片1"></div>
+            <div class="p-3 h-253">
               <h3 class="fs-4 fw-900 mb-3">中年轉型的工程師</h3>
               <p class="mb-3">59 歲被裁員時，我以為職涯結束了。職旅顧問不只幫我轉職，更讓我相信自己還有價值。現在我每月穩定接案、收入翻倍。年齡不是限制，只是我還沒找到對的方向。</p>
               <div class="d-flex">
@@ -334,9 +335,9 @@
             </div>
             <span class="position-absolute bg-primary text-white top-0 start-0 m-2 px-3 py-2 fw-medium"  style="border-radius: 16px;">數位遊牧 2 年</span>
           </div>
-          <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white" role="group" aria-label="4 / 6" >
-            <div class="horn"><img src="/htmlweek6/assets/story-cover-4-DDRMNC6y.png" class="mb-3" alt="圖片1"></div>
-            <div class="p-3">
+          <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white"  >
+            <div class="horn"><img src="/htmlweek6/assets/story-cover-4-DDRMNC6y.png" class="mb-3 w-100" alt="圖片1"></div>
+            <div class="p-3 h-253">
               <h3 class="fs-4 fw-900 mb-3">轉型成功的設計師</h3>
               <p class="mb-3">從企業設計師轉職自由接案，比我想的難太多。收入不穩時我幾乎想放棄，是職旅顧問幫我找回方向與差異化。半年後，我不僅維持收入，還能自由挑案，最重要的是，我終於有時間陪爸媽。</p>
               <div class="d-flex">
@@ -346,9 +347,9 @@
             </div>
             <span class="position-absolute bg-primary text-white top-0 start-0 m-2 px-3 py-2 fw-medium"  style="border-radius: 16px;">數位遊牧 2 年</span>
           </div>
-          <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white" role="group" aria-label="5 / 6" >
-            <div class="horn"><img src="/htmlweek6/assets/story-cover-5-BO9rNF91.png" class="mb-3" alt="圖片1"></div>
-            <div class="p-3">
+          <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white"  >
+            <div class="horn"><img src="/htmlweek6/assets/story-cover-5-BO9rNF91.png" class="mb-3 w-100" alt="圖片1"></div>
+            <div class="p-3 h-253">
               <h3 class="fs-4 fw-900 mb-3">數位遊牧生活實踐者</h3>
               <p class="mb-3">兩年前我只想環遊世界，卻不知道怎麼開始。職旅給了我遠端工作與生活規劃的指導。現在我在五個國家工作過，收入比以前多 20%。每次打開電腦，看見窗外不同的風景，都慶幸當初那一個決定。</p>
               <div class="d-flex">
@@ -358,9 +359,9 @@
             </div>
             <span class="position-absolute bg-primary text-white top-0 start-0 m-2 px-3 py-2 fw-medium"  style="border-radius: 16px;">數位遊牧 2 年</span>
           </div>
-          <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white" role="group" aria-label="6 / 6" >
-            <div class="horn"><img src="/htmlweek6/assets/story-cover-6-DQ0Un_5J.png" class="mb-3" alt="圖片1"></div>
-            <div class="p-3">
+          <div class="swiper-slide overflow-hidden shadow rounded-4 pb-4  position-relative bg-white"  >
+            <div class="horn"><img src="/htmlweek6/assets/story-cover-6-DQ0Un_5J.png" class="mb-3 w-100" alt="圖片1"></div>
+            <div class="p-3 h-253">
               <h3 class="fs-4 fw-900 mb-3">數位遊牧生活實踐者</h3>
               <p class="mb-3">兩年前我只想環遊世界，卻不知道怎麼開始。職旅給了我遠端工作與生活規劃的指導。現在我在五個國家工作過，收入比以前多 20%。每次打開電腦，看見窗外不同的風景，都慶幸當初那一個決定。</p>
               <div class="d-flex">
@@ -465,9 +466,11 @@
         <p class=" text-white lh mb-md-5 text-center" style="font-size: 18px;">簡單四步，踏上你的職旅</p>
       <div class="container">
         <div class="row">
-          <div class="col-lg-3">
+          <div class="swiper mySwipers mb-3">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide overflow-hidden shadow rounded-4   bg-white" >
             <div class="card  pt-6 pb-4 shadow  position-relative d-flex flex-column justify-content-center align-items-center" style="border-radius: 16px;">
-              <img src="/htmlweek6/assets/serve-1-DhBUs1Ns.svg" alt="serve-1" class="img-fluid object-fit-cover mb-md-5" >
+              <img src="/htmlweek6/assets/serve-1-DhBUs1Ns.svg" alt="serve-1" class="img-fluid object-fit-cover mb-md-5" style="width: 60%;" >
               <div class="position-absolute bg-grey text-primary top-0 start-0 py-3 px-4 fw-bold" style=" left: 0; width: fit-content; border-bottom-right-radius: 16px; border-top-left-radius: 16px;">
                 STEP1
               </div>
@@ -479,9 +482,9 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 d-none d-md-block">
+          <div class="swiper-slide overflow-hidden shadow rounded-4   bg-white" >
             <div class="card  pt-6 pb-4 shadow  position-relative d-flex flex-column justify-content-center align-items-center" style="border-radius: 16px;">
-              <img src="/htmlweek6/assets/serve-2-p7a3_oyg.svg" alt="serve-1" class="img-fluid object-fit-cover mb-md-5" >
+              <img src="/htmlweek6/assets/serve-2-p7a3_oyg.svg" alt="serve-1" class="img-fluid object-fit-cover mb-md-5" style="width: 60%;" >
               <div class="position-absolute bg-grey text-primary top-0 start-0 py-3 px-4 fw-bold" style=" left: 0; width: fit-content; border-bottom-right-radius: 16px; border-top-left-radius: 16px;">
                 STEP2
               </div>
@@ -493,9 +496,9 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 d-none d-md-block">
+          <div class="swiper-slide overflow-hidden shadow rounded-4   bg-white" >
             <div class="card  pt-6 pb-4 shadow  position-relative d-flex flex-column justify-content-center align-items-center" style="border-radius: 16px;">
-              <img src="/htmlweek6/assets/serve-3-DVJS8IDS.svg" alt="serve-1" class="img-fluid object-fit-cover mb-md-5" >
+              <img src="/htmlweek6/assets/serve-3-DVJS8IDS.svg" alt="serve-1" class="img-fluid object-fit-cover mb-md-5" style="width: 60%;" >
               <div class="position-absolute bg-grey text-primary top-0 start-0 py-3 px-4 fw-bold" style=" left: 0; width: fit-content; border-bottom-right-radius: 16px; border-top-left-radius: 16px;">
                 STEP3
               </div>
@@ -507,9 +510,9 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 d-none d-md-block">
+          <div class="swiper-slide overflow-hidden shadow rounded-4   bg-white" >
             <div class="card  pt-6 pb-4 shadow  position-relative d-flex flex-column justify-content-center align-items-center" style="border-radius: 16px;">
-              <img src="/htmlweek6/assets/serve-4-CbNxhiL3.svg" alt="serve-1" class="img-fluid object-fit-cover mb-md-5" >
+              <img src="/htmlweek6/assets/serve-4-CbNxhiL3.svg" alt="serve-1" class="img-fluid object-fit-cover mb-md-5" style="width: 60%;" >
               <div class="position-absolute bg-grey text-primary top-0 start-0 py-3 px-4 fw-bold" style=" left: 0; width: fit-content; border-bottom-right-radius: 16px; border-top-left-radius: 16px;">
                 STEP4
               </div>
@@ -521,6 +524,8 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
         </div>
       </div>  
 
