--- a/pages/about.html
+++ b/pages/about.html
@@ -14,10 +14,12 @@
     <!-- google icon -->
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     <!-- SWIPER -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@200..900&display=swap" rel="stylesheet">
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <title>關於職旅</title>
     <style>
       body {
@@ -36,28 +38,82 @@
         background-position: center;
         background-size: cover;
       }
+      .bg-half{
+        background: linear-gradient(to top, #f0f3f5 25%, transparent 25%);
+        background-color: #fcfcfd;
+      }
       .fs-20{
         font-size: 20px;
       }
-      .b-r-16{
-        border-radius: 16px;
-      }
       .mb-32 {
-       margin-bottom: 32px;
-      }
-      .d-inline-block {
-       display: inline-block;
-      }
-      .fw-900 {
-       font-weight: 900;
-      }
-      .fw-600 {
-        font-weight: 600;
-      }
-      .gray-600 {
-        color: #6c757d;
-      }
+  margin-bottom: 32px;
+}
+.fs-14{
+  font-size: 14px;
+}
+.d-inline-block {
+  display: inline-block;
+}
+.fw-900 {
+  font-weight: 900;
+}
+.fw-600 {
+  font-weight: 600;
+}
+.gray-600 {
+  color: #6c757d;
+}
+.swiper {
+  overflow: visible;
+  overflow-x: clip;
+}
+.swiper a {
+  font-size: 14px;
+  line-height: 2;
+  color: #569573;
+  text-decoration: none;
+  font-weight: 700;
+}
 
+.swiper-slide img {
+  display: block;
+  object-fit: cover;
+}
+.h-253{
+  height: 253px;
+}
+.swiper-pagination {
+  width: 232px;
+  position: relative;
+}
+.swiper-pagination::after {
+  content: "";
+  width: 80px;
+  height: 1px;
+  background-color: #6c757d;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.swiper-prev:hover {
+  background-color: #6c757d;
+}
+.swiper-button-disabled {
+  color: #dee2e6;
+  border-color: #dee2e6 !important;
+}
+.swiper-button-disabled:hover {
+  cursor: default;
+  background-color: initial !important;
+}
+.swiper-next:hover {
+  background-color: #6c757d;
+  color: #DEE2E6;
+}
+.only-staff {
+  background: #e8e3da;
+}
 
 /* 折角樣式 */
 .horn {
@@ -75,7 +131,19 @@
   border-color: transparent transparent #ffffff;
 }
 
-
+  .letter{
+    background-color: #141a1f80;
+    opacity: 0;
+    transition: opacity .5s ease;
+   }
+  .letter:hover{
+    opacity: 1;
+  }
+  .line{
+    width: 70%;
+    background: #d1d9e1;
+    height: 1px;
+  }
     </style>
   </head>
   <body>
@@ -184,18 +252,18 @@
             </p>
         </div>
          <div class="d-none d-md-block">
-          <img src="/assets/images/2025-week6/about/register.png" alt="#" style=" max-width: 700px;">
+          <img src="/assets/images/2025-week6/about/register.png" alt="#" style=" max-width:700px;">
         </div>
       </div>
     </div>
   </div>
        </div>
     </div>
-    <!-- sect1 -->
+     <!-- banner -->
      <div class="bg-banner-pc py-5 d-none d-lg-block">
       <div class="container py-5 d-flex flex-column align-items-center justify-content-center text-center position-relative">
-        <h2 class="fw-bold mb-3" style="font-size: 3rem;">服務方案</h2>
-        <p  class="text-secondary" style="font-size: 18px;">我們最全面的服務方案，為您提供從評估、規劃到實踐的完整支持。不再擔心轉型過程中的各種挑<br>戰，我們的專家團隊將全程陪伴，確保您順利實現職業自由。</p>
+        <h2 class="fw-bold mb-3" style="font-size: 3rem;">關於職旅</h2>
+        <p  class="text-secondary w-75" style="font-size: 18px;">職旅 WorkWay 匯集了來自不同領域、擁有豐富實戰經驗的自由工作者與數位遊牧專家。根據你的需求和階段，我們提供一對一諮詢。<br>無論你是剛開始探索期，還是已在轉型路上遇到瓶頸，我們都能提供適合你的專業指導。</p>
          <img src="/assets/images/2025-week6/service/banner-person.svg" alt="#" class="position-absolute" style="bottom: -55px; left: 80%; max-width: 100%;">
       </div>
      </div>
@@ -205,7 +273,92 @@
         <p  class="text-secondary" style="font-size: 16px;">我們最全面的服務方案，為您提供從評估、規劃到實踐的完整支持。不再擔心轉型過程中的各種挑戰，我們的專家團隊將全程陪伴，確保您順利實現職業自由。</p>
         </div>
      </div>
-   
+     <!-- person -->
+      <div>
+        <div class="container mt-3">
+          <div class="swiper mySwiperm mb-3">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide overflow-hidden shadow rounded-4   bg-white" >
+            <div class="card rounded-4 overflow-hidden">
+    <div class="card-img-top p-0">
+      <img src="/assets/images/2025-week6/about/mentor-1.png" alt="partner" height="400" class="w-100 object-fit-cover">
+    </div>
+    <div class="card-body" style="height: 176px;">
+      <h4 class="fs-6 text-secondary mb-2">數位遊牧先驅</h4>
+      <h3 class="fs-4 fw-bold mb-3">陳志遠 Ethan Chen</h3>
+      <div class="d-flex  pb-4">
+        <a href="#" class=" text-secondary border  px-2 py-1 me-2" style="border-radius: 16px;"># 遠端工作策略</a>
+        <a href="#" class=" text-secondary border  px-2 py-1" style="border-radius: 16px;"># 數位遊牧生活設計</a>
+      </div>
+    </div>
+            </div>
+          </div>
+          <div class="swiper-slide overflow-hidden shadow rounded-4   bg-white" >
+            <div class="card rounded-4 overflow-hidden">
+    <div class="card-img-top p-0">
+      <img src="/assets/images/2025-week6/about/mentor-2.png" alt="partner" height="400" class="w-100 object-fit-cover">
+    </div>
+    <div class="card-body" style="height: 176px;">
+      <h4 class="fs-6 text-secondary mb-2">個人品牌策略專家</h4>
+      <h3 class="fs-4 fw-bold mb-3">林曉彤 Clara Lin</h3>
+      <div class="d-flex flex-wrap pb-4">
+        <a href="#" class=" text-secondary border  px-2 py-1 me-2" style="border-radius: 16px;"># 個人品牌建立</a>
+        <a href="#" class=" text-secondary border  px-2 py-1" style="border-radius: 16px;"># 內容行銷策略</a>
+        <a href="#" class=" text-secondary border  px-2 py-1 mt-2" style="border-radius: 16px;"># 故事行銷</a>
+      </div>
+    </div>
+            </div>
+          </div>
+          <div class="swiper-slide overflow-hidden shadow rounded-4   bg-white" >
+           <div class="card rounded-4 overflow-hidden">
+    <div class="card-img-top p-0">
+      <img src="/assets/images/2025-week6/about/mentor-3.png" alt="partner" height="400" class="w-100 object-fit-cover">
+    </div>
+    <div class="card-body" style="height: 176px;">
+      <h4 class="fs-6 text-secondary mb-2">財務自由規劃顧問</h4>
+      <h3 class="fs-4 fw-bold mb-3">王建明 Marcus</h3>
+      <div class="d-flex flex-wrap pb-4">
+        <a href="#" class=" text-secondary border  px-2 py-1 me-2" style="border-radius: 16px;"># 稅務優化</a>
+        <a href="#" class=" text-secondary border  px-2 py-1" style="border-radius: 16px;"># 被動收入建立</a>
+        <a href="#" class=" text-secondary border  px-2 py-1 mt-2" style="border-radius: 16px;"># 現金流管理</a>
+      </div>
+    </div>
+            </div>
+          </div>
+          <div class="swiper-slide overflow-hidden shadow rounded-4   bg-white" >
+            <div class="card rounded-4 overflow-hidden">
+    <div class="card-img-top p-0">
+      <img src="/assets/images/2025-week6/about/mentor-4.png" alt="partner" height="400" class="w-100 object-fit-cover">
+    </div>
+    <div class="card-body" style="height: 176px;">
+      <h4 class="fs-6 text-secondary mb-2">創意接案與多元收入專家</h4>
+      <h3 class="fs-4 fw-bold mb-3">張雅琳 Ariel</h3>
+      <div class="d-flex flex-wrap pb-4">
+        <a href="#" class=" text-secondary border  px-2 py-1 me-2" style="border-radius: 16px;"># 創意變現策略</a>
+        <a href="#" class=" text-secondary border  px-2 py-1" style="border-radius: 16px;"># 線上課程開發</a>
+      </div>
+    </div>
+            </div>
+          </div>
+          <div class="swiper-slide overflow-hidden shadow rounded-4   bg-white" >
+            <div class="card rounded-4 overflow-hidden">
+    <div class="card-img-top p-0">
+      <img src="/assets/images/2025-week6/about/mentor-5.png" alt="partner" height="400" class="w-100 object-fit-cover">
+    </div>
+    <div class="card-body" style="height: 176px;">
+      <h4 class="fs-6 text-secondary mb-2">遠端工作技術顧問</h4>
+      <h3 class="fs-4 fw-bold mb-3">李俊宏 Kevin Lee</h3>
+      <div class="d-flex  pb-4">
+        <a href="#" class=" text-secondary border  px-2 py-1 me-2" style="border-radius: 16px;"># 專案管理自動化</a>
+        <a href="#" class=" text-secondary border  px-2 py-1" style="border-radius: 16px;"># 虛擬團隊管理</a>
+      </div>
+    </div>
+            </div>
+          </div>
+        </div>
+          </div>
+        </div>
+      </div>
       <!-- contact  -->
        <div class=" py-7">
           <div class="container py-md-4 py-3 px-md-5 px-4 bg-primary" style="border-radius: 16px;">
@@ -237,6 +390,8 @@
     Copyright © 2025 職旅 workway. All rights reserved.
   </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <script type="module" src="../main.js"></script>
   </body>
