--- a/pages/index.html
+++ b/pages/index.html
@@ -537,7 +537,7 @@
           </div>
           <div class="row justify-content-between align-items-center">
             <div class="col-md-4">
-              <img src="/assets/images/2025-week6/index/qa.svg" alt="qa">
+              <img src="/assets/images/2025-week6/index/qa.svg" alt="qa" class="w-100">
             </div>
             <div class="col-md-7">
               <div class="accordion mb-3" id="accordionExample1">
