--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     height: 1px;
   }
     </style>
-    <script type="module" crossorigin src="/htmlweek6/assets/main-DwZvcFzd.js"></script>
+    <script type="module" crossorigin src="/htmlweek6/assets/main-C5qSMliv.js"></script>
     <link rel="stylesheet" crossorigin href="/htmlweek6/assets/main-Cx073WyX.css">
   </head>
   <body>
@@ -539,7 +539,7 @@
           </div>
           <div class="row justify-content-between align-items-center">
             <div class="col-md-4">
-              <img src="/htmlweek6/assets/qa-DKX_OAbf.svg" alt="qa">
+              <img src="/htmlweek6/assets/qa-DKX_OAbf.svg" alt="qa" class="w-100">
             </div>
             <div class="col-md-7">
               <div class="accordion mb-3" id="accordionExample1">
