--- a/service.html
+++ b/service.html
@@ -24,7 +24,9 @@
         font-family: "Noto Serif TC", serif;
         line-height: 1.5;
       }
-      
+      .pt-40{
+        padding-top: 40px;
+      }
       .bg-banner-pc{
         background-image: url(/htmlweek6/assets/banner-bg-pc-CrJ0aIBr.png);
         background-repeat: no-repeat;
@@ -197,7 +199,26 @@ input[type="radio"]:checked {
           <img src="/htmlweek6/assets/avatar-QGHQ479s.png" alt="#" class="rounded-circle" style="max-width:44px;" >
           <span class="d-none d-lg-block ms-2">Mokumaru</span>
         </a>
-        <svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#e3e3e3" class="d-md-none  ms-4"><path d="M92-92v-96.67h776.67V-92H92Zm0-340v-96.67h776.67V-432H92Zm0-340v-96.67h776.67V-772H92Z"/></svg>
+         <a class="" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample"><svg xmlns="http://www.w3.org/2000/svg" height="40px" viewBox="0 -960 960 960" width="40px" fill="#e3e3e3" class="d-lg-none  ms-4"><path d="M92-92v-96.67h776.67V-92H92Zm0-340v-96.67h776.67V-432H92Zm0-340v-96.67h776.67V-772H92Z"/></svg></a>
+       </div>
+       <!-- s -->
+      <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+  <div class="offcanvas-header">
+    
+    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body d-flex flex-column justify-content-between " >
+    <div>
+      <ul class="list-unstyled text-center">
+        <li class="mb-4"><a class="text-decoration-none text-black" style="font-size: 14px;" href="service.html">服務方案</a></li>
+        <li class="mb-4"><a class="text-decoration-none text-black" style="font-size: 14px;" href="about.html">關於職旅</a></li>
+        <li class="mb-4"><a class="text-decoration-none text-black" style="font-size: 14px;" href="contact.html">聯絡我們</a></li>
+      </ul>
+    </div>
+    <div>
+      <a  data-bs-toggle="modal" data-bs-target="#exampleModal" class="bg-green text-black px-3 px-lg-4 py-2 text-decoration-none text-center d-block " style="border-radius: 16px; font-weight: 700; font-size: 20px; line-height: 1.2; display: block;">登入/註冊</a>
+    </div>
+  </div>
       </div>
       <!-- Modal -->
        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -325,7 +346,7 @@ input[type="radio"]:checked {
     <li>
       <input type="radio" id="cardOption1" name="cardSelect" value="card1" checked>
       <label for="cardOption1" class="card-label d-flex align-items-start shadow rounded-5 p-lg-5 mb-4">
-        <div class="flex-grow-1 me-4 p-12">
+        <div class="flex-grow-1 me-4 px-12 pb-12 pt-40">
           <p class="text-primary mb-2">全面方案</p>
           <h4 class="fs-4 fw-bold mb-2">職涯轉型全程計畫</h4>
           <p class="mb-2">針對希望完全改變職業領域的資深專業人士。我們的專家團隊將協助您將過往經驗轉化為新領域的競爭優勢。</p>
@@ -372,7 +393,7 @@ input[type="radio"]:checked {
     <li>
       <input type="radio" id="cardOption2" name="cardSelect" value="card2">
       <label for="cardOption2" class="card-label d-flex align-items-start shadow rounded-5 p-lg-5 mb-4">
-        <div class="flex-grow-1 me-4 p-12">
+        <div class="flex-grow-1 me-4 px-12 pb-12 pt-40">
           <p class="text-primary mb-2">加速方案</p>
           <h4 class="fs-4 fw-bold mb-2">自由工作加速計畫</h4>
           <p class="mb-2">為已確定要轉型但需要全面規劃的專業人士設計。六次深度諮詢，從心態調整到實際操作，全方位為您的轉型做好準備。</p>
@@ -419,7 +440,7 @@ input[type="radio"]:checked {
     <li>
       <input type="radio" id="cardOption3" name="cardSelect" value="card3">
       <label for="cardOption3" class="card-label d-flex align-items-start shadow rounded-5 p-lg-5">
-        <div class="flex-grow-1 me-4 p-12">
+        <div class="flex-grow-1 me-4 px-12 pb-12 pt-40">
           <p class="text-primary mb-2">遊牧方案</p>
           <h4 class="fs-4 fw-bold mb-2">數位遊牧生活計畫</h4>
           <p class="mb-2">針對希望完全改變職業領域的資深專業人士。我們的專家團隊將協助您將過往經驗轉化為新領域的競爭優勢。</p>
